--- a/templates/login.html
+++ b/templates/login.html
@@ -6,7 +6,7 @@
 <div class="form-group">
     <form action="{{ url_for('login') }}" method="POST">
         <div class="form-group">
-            <input type="text" name="username" placeholder="username">
+            <input type="text" name="username" placeholder="username" autocomplete="off">
         <div class="form-group">
             <input type="password" name="password" placeholder="password">
         </div>
