--- a/templates/main.html
+++ b/templates/main.html
@@ -1,8 +1,7 @@
 {% extends "index.html" %}
 {% block login %}
-{5 if account 5}
-    {{ account }}
-
+{% if account %}
+    {{account}}
     <a href="{{ url_for('logout') }}">Logout</a>
     {% else %}
     <a href="{{ url_for('register') }}">Register</a>
@@ -11,16 +10,28 @@
 {% endblock %}
 {% block body %}
 <h1>Posts</h1>
+{% if account %}
+     <a href="{{ url_for('new') }}">New</a>
+{% endif %}
 {% for post in posts %}
 <div class="post_link">
-    <a href="{{ url_for('post',post_id=post.id) }}">{{post.title}}</a>
-    <br>
-    {{post.time}}
-    <br>
-    {{post.username}}
-    <br>
+    <div class="left">
+        <a href="{{ url_for('post',post_id=post.id) }}">{{post.title}}</a>
+        <br>
+        {{post.time}}
+        <br>
+        User: {{post.username}}
+        <br>
+    </div>
+    {% if account == post.username %}
+    <form action="{{ url_for('delete',post_id=post.id) }}" method="POST">
+        <button class="btn btn-primary right">Delete</button>
+    </form>
+    <form action="{{ url_for('edit',post_id=post.id) }}" method="GET">
+        <button class="btn btn-primary right">Edit</button>
+    </form>
+    {% endif %}
 </div>
 {% endfor %}
- <a href="{{ url_for('new') }}">new</a>
 {% endblock %}
 
