Removed uneccesary code. Added logout to post redirect.

--- a/templates/post.html
+++ b/templates/post.html
@@ -3,7 +3,7 @@
     {% if account %}
         {{ account }}
 
-        <a href="{{ url_for('logout') }}">Logout</a>
+        <a href="{{ url_for('logout',post_id=post.id) }}">Logout</a>
         {% else %}
         <a href="{{ url_for('register') }}">Register</a>
         <a href="{{ url_for('login') }}">Login</a>
