--- a/templates/main.html
+++ b/templates/main.html
@@ -2,7 +2,7 @@
 {% block login %}
 {% if account %}
     {{account}}
-    <a href="{{ url_for('logout') }}">Logout</a>
+    <a href="{{ url_for('logout',post_id=None) }}">Logout</a>
     {% else %}
     <a href="{{ url_for('register') }}">Register</a>
     <a href="{{ url_for('login') }}">Login</a>
@@ -34,4 +34,3 @@
 </div>
 {% endfor %}
 {% endblock %}
-
