--- a/templates/new_post.html
+++ b/templates/new_post.html
@@ -2,7 +2,7 @@
 {% block login %}
 {{ account }}
 
-<a href="{{ url_for('logout') }}">Logout</a>
+<a href="{{ url_for('logout',post_id=None) }}">Logout</a>
 {% endblock %}
 {% block body %}
 <div class="form-group">
