--- a/templates/post.html
+++ b/templates/post.html
@@ -1,9 +1,10 @@
 {% extends "index.html" %}
 {% block login %}
-{% for post in posts %}
     {% if account %}
         {{ account }}
+        {% for post in posts %}
             <a href="{{ url_for('logout',post_id=post.id) }}">Logout</a>
+        {% endfor %}
         {% else %}
         <a href="{{ url_for('register') }}">Register</a>
         <a href="{{ url_for('login') }}">Login</a>
@@ -11,7 +12,7 @@
 {% endblock %}
 {% block body %}
 <a href="{{ url_for('index') }}">Back</a>
-
+{% for post in posts %}
 <div class="post">
     <h1>{{post.title}}</h1>
     <br>
