--- a/templates/login.html
+++ b/templates/login.html
@@ -4,9 +4,10 @@
 {% block body %}
 <h1>Login</h1>
 <div class="form-group">
-    <form action="{{ url_for('login') }}" method="POST">
+    <form action="{{ url_for('login',post_id=post_id) }}" method="POST">
         <div class="form-group">
             <input type="text" name="username" placeholder="username" autocomplete="off">
+        </div>
         <div class="form-group">
             <input type="password" name="password" placeholder="password">
         </div>
